--- a/indx.css
+++ b/indx.css
@@ -33,11 +33,9 @@
 .box-2{
     grid-column-start: 2;
     grid-row-end: span 2;
+    padding: 5%;
+    padding-top: 15%;
     padding-left: 15%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     /* border: 3px solid green; */
 }
 
@@ -97,18 +95,18 @@
 
         padding: 0;
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
     .box-2 h2{
         font-size: 30px;
+        text-align: center;
+
     }
     
     .box-2 h1{
         font-size: 25px;
+        text-align: center;
+
     }
     
     .box-2 .title {
@@ -125,14 +123,29 @@
         grid-column-end: span 2;
         grid-row-start: 3;
     }
+
+    .box-3 a{
+        margin-top: 12;
+        font-size: 5vw;
+    }
 }
 
-@media (max-width: 960px) and (min-width: 601px){
-    .box-2{
-        padding-top: 50%;
-    }
+@media (max-width: 1051px) and (min-width: 601px){
     .box-2 h2{
+        font-size: 30px;
+    }
+    
+    .box-2 h1{
         font-size: 25px;
+    }
+    
+    .box-2 .title {
+        font-size: 14px;
+    }
+    
+    .box-2 p{
+        font-size: 15px;
+        /* text-align: center; */
     }
 
 }
