--- a/bulletin.css
+++ b/bulletin.css
@@ -1,12 +1,19 @@
-.container-1{
-    padding-top: 3%;
-    max-height: 1474px;
 
-    border: 2px solid maroon;
+.main-container{
+  padding: 3%;
 }
 
-.h1{
-   text-align: center;
+.container-1{
+    max-height: 1474px;
+}
+
+.gallery-text{
+  display: flex;
+  justify-content: center;
+}
+
+.gallery-text h1{
+  letter-spacing: 3px;
 }
 
 .slideshow-container {
@@ -93,3 +100,90 @@
     from {opacity: .4}
     to {opacity: 1}
   }
+
+
+  .comment-section{
+    width: 70%;
+    margin:auto;
+
+    padding: 2%;
+  }
+
+  .comment-container{
+    display: grid;
+    gap: 2vw;
+
+    grid-template-columns: 1fr 1fr 1fr;
+
+    line-height: 1.5rem;
+  }
+
+  .box{
+    border: 2px dashed black;
+    background-color: white;
+    border-radius: 10%;
+    padding: 1.5rem;
+  }
+
+  .box h3{
+    padding: 2%;
+    background-color: rgb(0, 210, 84);
+    display: flex;
+  }
+
+  .name{
+    text-align: center;
+
+    color: white;
+    font-size: 1rem;
+    letter-spacing: 3px;
+  }
+
+  .comment-container img{
+    width: 50px;
+    height: auto;
+    border-radius: 50px;
+    margin-right: 5px;
+  }
+
+  .comment-section h2{
+    width: 100%;
+    text-align: center;
+    letter-spacing: 10px;
+  }
+
+  .box1 {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .box2{
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .box4{
+    grid-column: 3;
+    grid-row: 1/span 2;
+  }
+
+  .box3{
+    grid-column: 1/span 2;
+    grid-row: 2;
+  }
+
+  @media screen and (max-width:1080px){
+    .comment-container{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
+
+  }
+
+
+ 
+
+
+
+ 
